modifications on ordinary thief life cycle

--- a/1phase/working/assaltomuseu/AtoresPrincipais/Ladrao.html
+++ b/1phase/working/assaltomuseu/AtoresPrincipais/Ladrao.html
@@ -177,7 +177,7 @@ extends java.lang.Thread</pre>
       java.lang.String&nbsp;name,
       <a href="../../assaltomuseu/ParametrosDoProblema/GeneralRepository.html" title="class in VersaoConcorrente.ParametrosDoProblema">GeneralRepository</a>&nbsp;generalRepository,
       <a href="../../assaltomuseu/Regioes/gruposAssalto/GestorGruposAssalto.html" title="class in VersaoConcorrente.Regioes.gruposAssalto">GestorGruposAssalto</a>&nbsp;grupo,
-      <a href="../../assaltomuseu/Regioes/escritorioChefe/CollectionSite.html" title="class in VersaoConcorrente.Regioes.escritorioChefe">CollectionSite</a>&nbsp;escritorio,
+      <a href="../../assaltomuseu/Regioes/escritorioChefe/CollectionSite.html" title="class in VersaoConcorrente.Regioes.escritorioChefe">CollectionSite</a>&nbsp;collectionSite,
       <a href="../../assaltomuseu/Regioes/base/ConcentrationSite.html" title="class in VersaoConcorrente.Regioes.base">ConcentrationSite</a>&nbsp;concentrationSite)</code>&nbsp;</td>
 </tr>
 </table>
@@ -238,7 +238,7 @@ extends java.lang.Thread</pre>
               java.lang.String&nbsp;name,
               <a href="../../assaltomuseu/ParametrosDoProblema/GeneralRepository.html" title="class in VersaoConcorrente.ParametrosDoProblema">GeneralRepository</a>&nbsp;generalRepository,
               <a href="../../assaltomuseu/Regioes/gruposAssalto/GestorGruposAssalto.html" title="class in VersaoConcorrente.Regioes.gruposAssalto">GestorGruposAssalto</a>&nbsp;grupo,
-              <a href="../../assaltomuseu/Regioes/escritorioChefe/CollectionSite.html" title="class in VersaoConcorrente.Regioes.escritorioChefe">CollectionSite</a>&nbsp;escritorio,
+              <a href="../../assaltomuseu/Regioes/escritorioChefe/CollectionSite.html" title="class in VersaoConcorrente.Regioes.escritorioChefe">CollectionSite</a>&nbsp;collectionSite,
               <a href="../../assaltomuseu/Regioes/base/ConcentrationSite.html" title="class in VersaoConcorrente.Regioes.base">ConcentrationSite</a>&nbsp;concentrationSite)</pre>
 <dl>
 <dt><span class="paramLabel">Parameters:</span></dt>
@@ -246,7 +246,7 @@ extends java.lang.Thread</pre>
 <dd><code>name</code> - Thief name</dd>
 <dd><code>generalRepository</code> - General Repository</dd>
 <dd><code>grupo</code> - Assault Party manager</dd>
-<dd><code>escritorio</code> - Concentration Site</dd>
+<dd><code>collectionSite</code> - Concentration Site</dd>
 <dd><code>concentrationSite</code> - ConcentrationSite</dd>
 </dl>
 </li>
